--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
     font-family: "Inter", system-ui, sans-serif;
     line-height: 1.6;
     color: #1f2937;
-    background-color: #ffffff;
+    background-color: #f0fdfa;
   }
 
   h1,
